--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,24 +1,11 @@
-server:
-  port: 8900
-
-spring:
-  application:
-    name: eureka-server
-eureka:
-  server:
-    enable-self-preservation: false
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      #default-zone: http://localhost:8761/eureka
-      defaultZone: http://localhost:${server.port}/eureka
-  instance:
-    hostname: localhost
-    lease-expiration-duration-in-seconds: 15
-    lease-renewal-interval-in-seconds: 15
-
 logging:
   level:
     com.netflix.eureka: off
     com.netflix.discovery: off
+spring:
+  application:
+    name: eureka-server
+  profiles:
+    active: dev
+  config:
+    import: "configserver:${CONFIG_SERVER_ADDR}"
